[gd_scene load_steps=10 format=2]

[ext_resource path="res://src/main/ui/theme/h4.theme" type="Theme" id=1]
[ext_resource path="res://src/demo/world/cutscene-demo.gd" type="Script" id=2]
[ext_resource path="res://src/main/ui/DialogBackdrop.tscn" type="PackedScene" id=3]
[ext_resource path="res://src/demo/world/cutscene-demo-fatness.gd" type="Script" id=4]
[ext_resource path="res://src/demo/world/cutscene-demo-long-names.gd" type="Script" id=5]
[ext_resource path="res://src/main/ui/theme/h5.theme" type="Theme" id=7]
[ext_resource path="res://src/demo/world/cutscene-demo-flags.gd" type="Script" id=8]
[ext_resource path="res://src/demo/DemoSave.tscn" type="PackedScene" id=9]
[ext_resource path="res://src/demo/world/cutscene-demo-open.gd" type="Script" id=10]

[node name="CutsceneDemo" type="Node"]
script = ExtResource( 2 )

[node name="Input" type="VBoxContainer" parent="."]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -200.0
offset_top = -114.0
offset_right = 200.0
offset_bottom = 114.0

[node name="Flags" type="VBoxContainer" parent="Input"]
offset_right = 400.0
offset_bottom = 124.0
script = ExtResource( 8 )

[node name="Label" type="Label" parent="Input/Flags"]
offset_right = 400.0
offset_bottom = 20.0
theme = ExtResource( 1 )
text = "Flags"

[node name="TextEdit" type="TextEdit" parent="Input/Flags"]
offset_top = 24.0
offset_right = 400.0
offset_bottom = 124.0
custom_minimum_size = Vector2( 0, 100 )
theme = ExtResource( 7 )
text = "chat_finished career/marsh/020
chat_finished career/marsh/30_d"

[node name="LongNames" type="CheckBox" parent="Input"]
offset_top = 128.0
offset_right = 400.0
offset_bottom = 156.0
theme = ExtResource( 1 )
text = "Long Names"
script = ExtResource( 5 )

[node name="Fatness" type="HBoxContainer" parent="Input"]
offset_top = 160.0
offset_right = 400.0
offset_bottom = 188.0
script = ExtResource( 4 )

[node name="CheckBox" type="CheckBox" parent="Input/Fatness"]
offset_right = 90.0
offset_bottom = 28.0
theme = ExtResource( 1 )
text = "Fatness"

[node name="HSlider" type="HSlider" parent="Input/Fatness"]
offset_left = 94.0
offset_right = 361.0
offset_bottom = 28.0
size_flags_horizontal = 3
size_flags_vertical = 1
min_value = 1.0
max_value = 10.0
value = 10.0
tick_count = 10
ticks_on_borders = true

[node name="Value" type="Label" parent="Input/Fatness"]
offset_left = 365.0
offset_top = 4.0
offset_right = 400.0
offset_bottom = 24.0
custom_minimum_size = Vector2( 35, 0 )
size_flags_horizontal = 0
theme = ExtResource( 1 )
text = "10.0"
horizontal_alignment = 1

[node name="Open" type="HBoxContainer" parent="Input"]
offset_top = 192.0
offset_right = 400.0
offset_bottom = 222.0
script = ExtResource( 10 )

[node name="Button" type="Button" parent="Input/Open"]
offset_right = 52.0
offset_bottom = 30.0
theme = ExtResource( 1 )
text = "Open"

[node name="LineEdit" type="LineEdit" parent="Input/Open"]
offset_left = 56.0
offset_right = 400.0
offset_bottom = 30.0
size_flags_horizontal = 3
theme = ExtResource( 1 )
text = "chat/career/marsh/40_end"
caret_blink = true
caret_blink_interval = 0.5

[node name="StartButton" type="Button" parent="Input"]
offset_top = 226.0
offset_right = 400.0
offset_bottom = 252.0
theme = ExtResource( 1 )
text = "Start"

[node name="Dialogs" type="Control" parent="."]
process_mode = 3
anchor_right = 1.0
anchor_bottom = 1.0
mouse_filter = 2
__meta__ = {
"_edit_lock_": true,
"_edit_use_anchors_": false
}

[node name="Backdrop" parent="Dialogs" instance=ExtResource( 3 )]

[node name="OpenFile" type="FileDialog" parent="Dialogs"]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -320.0
offset_top = -200.0
offset_right = 320.0
offset_bottom = 200.0
size = Vector2i(640, 400)
exclusive = true
window_title = "Open a File"
file_mode = 0
filters = PackedStringArray( "*.chat" )

[node name="Error" type="AcceptDialog" parent="Dialogs"]
offset_right = 250.0
offset_bottom = 58.0
size = Vector2i(250, 58)
exclusive = true
window_title = "Error"
dialog_autowrap = true

[node name="DemoSave" parent="." instance=ExtResource( 9 )]

[connection signal="toggled" from="Input/LongNames" to="Input/LongNames" method="_on_toggled"]
[connection signal="pressed" from="Input/Fatness/CheckBox" to="Input/Fatness" method="_on_CheckBox_pressed"]
[connection signal="value_changed" from="Input/Fatness/HSlider" to="Input/Fatness" method="_on_HSlider_value_changed"]
[connection signal="valid_changed" from="Input/Open" to="." method="_on_Open_valid_changed"]
[connection signal="pressed" from="Input/Open/Button" to="." method="_on_OpenButton_pressed"]
[connection signal="pressed" from="Input/StartButton" to="." method="_on_StartButton_pressed"]
[connection signal="about_to_popup" from="Dialogs/OpenFile" to="Dialogs/Backdrop" method="_on_Dialog_about_to_show"]
[connection signal="file_selected" from="Dialogs/OpenFile" to="." method="_on_OpenFileDialog_file_selected"]
[connection signal="hidden" from="Dialogs/OpenFile" to="." method="_on_OpenFile_hidden"]
[connection signal="popup_hide" from="Dialogs/OpenFile" to="Dialogs/Backdrop" method="_on_Dialog_popup_hide"]
[connection signal="about_to_popup" from="Dialogs/Error" to="Dialogs/Backdrop" method="_on_Dialog_about_to_show"]
[connection signal="hide" from="Dialogs/Error" to="." method="_on_Error_hidden"]
[connection signal="popup_hide" from="Dialogs/Error" to="Dialogs/Backdrop" method="_on_Dialog_popup_hide"]
